--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 200px;
+    height: 120px;
     border-style: solid;
     border-width: 1px;
     border-bottom-color: rgb(167, 169, 169);
@@ -14,13 +14,18 @@
 
 .main-logo{
     position: absolute;
-    top: 40px;
+    top: 20px;
     left: 50px;
+}
+
+.main-logo-size {
+    width: 150px;
+    height: 30px;
 }
 
 .logo-container {
     display: flex;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-right: 100px;
     flex-direction: row;
     justify-content: space-between;
@@ -42,14 +47,14 @@
 .sub-logo-background{
     width: 70px;
     height: 50px;
-    margin-left: 30px;
+    margin-left: 40px;
     margin-top: 20px;
     display: flex;
     flex-direction: row;
 }
 
 .logo {
-    width: 50px;
+    width: 40px;
     height: 40px;
     margin-left: 10px;  
 }
@@ -57,9 +62,14 @@
 .header-heading {
     color: rgb(36, 34, 34);
     font-family: "Roboto";
-    font-size: 25px;
+    font-size: 20px;
     margin-top: 25px;
-    margin-left: 10px;
+    margin-left: 0px;
+}
+
+.avatar {
+    width: 50px;
+    height: 60px;
 }
 
 .avatar-name {
