--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -1,11 +1,12 @@
 .sidebar {
     position: fixed;
-    top: 200px;
+    top: 120px;
     left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
+    text-align: left;
+    width: 150px;
     height: 100%;
     background-color: white;
     border-right-style: solid;
@@ -13,7 +14,23 @@
     border-width: 1px;
 }
 
+p:hover{
+    background-color: green;
+    width: 110px;
+    height: 40px;
+    border-style: none;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-top: 5px;
+    
+
+}
+
 .side-margin {
-    margin-top: 12px;
-    width: 120px;
+    margin-top: 20px;
+    width: 100px;
+    color: black;
+    font-family: "Roboto";
+    font-size: 16px;
+    
 }
